iniciando a refatoração do projeto renomeando as variáveis e funções

--- a/home.html
+++ b/home.html
@@ -81,7 +81,7 @@
 
             <button onclick="fecharModalReg()" id="btnFecharReg" class="btn-close btn-sm position-absolute end-0 top-0 me-2 mt-2"></button>
 
-            <h3 class="text-center">Registrar filme</h3>
+            <h3 class="text-center">Registrar Livro</h3>
             <div class="row mt-5 d-flex align-items-center">
                 <div class="col-12">
                     <label class="form-label" for="text">Título</label>
