--- a/home.html
+++ b/home.html
@@ -66,7 +66,7 @@
         <section class="container-fluid mt-4">
             <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5" id="catalogo">
 
-            <!-- Card dos filmes serão adicionados aqui pelo script -->
+            <!-- Card dos livros serão adicionados aqui pelo script -->
 
             </div>
 
@@ -81,9 +81,9 @@
 
     <!--Modal para registrar filme-->
     <div id="modal_registro" class="d-none bg-modal position-fixed start-0 top-0 w-100 h-100 d-flex justify-content-center align-items-center">
-        <div class="px-4 container bg-white rounded-3 p-4 position-relative">
+        <div class="px-4 container bg-white rounded-3 p-4 position-relative max-tamanho-modal">
 
-            <button onclick="fecharModalReg()" id="btn_fechar_registro" class="btn-close btn-sm position-absolute end-0 top-0 me-2 mt-2"></button>
+            <button id="btn_fechar_registro" class="btn-close btn-sm position-absolute end-0 top-0 me-2 mt-2"></button>
 
             <h3 class="text-center">Registrar Livro</h3>
             <div class="row mt-5 d-flex align-items-center">
@@ -154,7 +154,7 @@
             <p class="text-danger text-center mt-3 d-none" id="mensagem">Preencha todos os campos!</p>
 
             <div class="row mt-3 d-flex justify-content-center">
-                <button id="btnModalAdd" class="col-9 btn btn-primary">Adicionar</button>
+                <button id="btn_enviar_registro" class="col-9 btn btn-primary">Adicionar</button>
             </div>  
         </div>
     </div>
