adicionado função de filtragem e exclusão de livros

--- a/home.html
+++ b/home.html
@@ -64,6 +64,7 @@
         </section>
 
         <section class="container-fluid mt-4">
+            <p id="mensagem_catalogo" class="d-none text-muted d-flex justify-content-center">Não há livros a serem exibidos aqui...</p>
             <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5" id="catalogo">
 
             <!-- Card dos livros serão adicionados aqui pelo script -->
