criei aba lista de desejos (nao funciona ainda)

--- a/cadastro.html
+++ b/cadastro.html
@@ -62,7 +62,10 @@
 
                     <!-- Senha -->
                     <div class="mb-3">
-                        <input type="password" id="senhaA" class="form-control" placeholder="Senha">
+                        <div class="input-group">
+                            <input type="password" id="senhaA" class="form-control" placeholder="Senha">
+                            <button id="exibirSenha" class="btn btn-outline-default"><i id="olho" class="bi-eye-slash-fill"></i></button>
+                        </div>
                     </div>
 
                     <!-- Confirmar senha -->
